--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <textarea name="File" id="" cols="30" rows="10"></textarea>
+        <textarea name="File2-File" id="" cols="30" rows="10"></textarea>
+
     </body>
 </html>
